name:                aocCommon
version:             1.2.1.0
-- synopsis:
-- description:
homepage:            https://github.com/Entze/aoc#readme
license:             BSD3
license-file:        LICENSE
author:              Lukas Grassauer
maintainer:          lukas@grassauer.eu
copyright:           2020 Lukas Grassauer
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    Data.List.AocCommon,
                      Control.Monad.Except.AocCommon,
                      AocCommon.AocMain,
                      AocCommon
  build-depends:      base >= 4.7 && < 5,
                      safe >= 0.3 && < 1,
                      mtl >= 2.0 && < 3,
                      text >= 1.0 && < 2,
                      either >= 4.0 && < 6,
                      autoexporter >= 1.1 && < 2

test-suite aocCommonSpec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  main-is:            AocCommonSpec.hs
  other-modules:      CommonSpec,
                      AocCommon.AocMain.Spec,
                      Data.List.AocCommon.Spec,
                      Control.Monad.Except.AocCommon.Spec
  hs-source-dirs:     test
  build-depends:      base >= 4.7 && < 5,
                      hspec >= 2.7 && <3,
                      hspec-core >= 2.7 && <3,
                      QuickCheck >= 2.13 && <3,
                      leancheck >= 0.9 && <1,
                      hspec-leancheck >= 0.0.4 && < 1,
                      safe >= 0.3 && < 1,
                      mtl >= 2.0 && < 3,
                      text >= 1.0 && < 2,
                      aocCommon
  default-language:   Haskell2010
